[gd_scene load_steps=2 format=3 uid="uid://dn1i5ix1i4wcq"]

[ext_resource type="Script" path="res://scenes/result_screen.gd" id="1_wvb8y"]

[node name="result_screen" type="Node2D"]
script = ExtResource("1_wvb8y")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 248.0
offset_top = 194.0
offset_right = 248.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.08, 3.08)
size_flags_horizontal = 4

[node name="Perfect_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PERFEITO"

[node name="Good_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = 20.0
offset_right = 37.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "BOM"

[node name="Bad_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = 51.0
offset_right = 37.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
text = "RUIM"
